Prevent overlapping plans and fix wrong time rendering

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,4 +1,4 @@
-$slot-height: 40px;
+$slot-height: 50px;
 
 $font-color-light: #333;
 $color-red : #FF7976;
