--- a/src/scss/_titmeTable.scss
+++ b/src/scss/_titmeTable.scss
@@ -67,14 +67,22 @@
         &--radiusTop {
             border-top-right-radius: 8px;
             border-top-left-radius: 8px;
-            display: block !important;
+            display: block;
         }
         &--radiusBottom {
             border-bottom-right-radius: 8px;
             border-bottom-left-radius: 8px;
-            display: block !important;
+            display: block;
             @media only screen and (max-width: $break-point){
                 margin-bottom: 10px;
+            }
+        }
+        &--radiusFull {
+            display: block;
+            border-radius: 8px;
+            @media only screen and (max-width: $break-point){
+                margin-bottom: 10px;
+                min-height: 65px;
             }
         }
     }
@@ -85,7 +93,9 @@
             background-color: #ffffff40;
             border-top-right-radius: 8px;
             border-top-left-radius: 8px;
-            padding: 5px;
+            padding: 4px;
+            font-size: .8rem;
+            max-height: 30px;
         }
         & > :nth-child(2){
             padding: 5px;
